# harnessa

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PROJECT_SPEC.md  README.md  RESULTS.md  pyproject.toml
criteria/: backend.yaml  fullstack.yaml
docs/: ARCHITECTURE.md  ARTICLE_REFERENCE.md  CEO_REVIEW.md  PLAN.md  PRESENTATION_PLAN.md  TEST_PLAN.md
presentation/: generate_the_adversarial_architecture.py  the-adversarial-architecture.pptx
scripts/: analyze-results.sh  run-all-benchmarks.sh  run-benchmark.sh  run-cross-model.sh
showcase/: BUILD_LOG.md  README.md  TASK.md  index.ts  package-lock.json  package.json  spec.md  sql.js.d.ts  start.sh  tsconfig.json  tsconfig.server.json
telemetry-archive/: 3061e233-e7f9-4477-b0a8-accbd194d933.json  410f76ce-e0d5-4d2a-bdf1-849278c2c376.json  6649b0bc-22ec-467e-8137-e92307468e63.json  7799434e-1636-4cd9-95f3-4ad0ecdd5e1b.json  7dbac7be-af56-4f41-9475-7044c9363b95.json  867e4e79-dfa9-4894-b04d-9f2efa28e790.json  b153e749-8372-4f64-8a91-c8ee1d3d64ba.json  bd67944a-a376-4601-86cd-7245549afa47.json  e7c84a5d-4b0e-4e4d-a9b3-a39dd6d8cf95.json  efab0ba4-308f-41df-96a2-0bc67e0e46a1.json  f584e402-26e8-4f0d-b434-72b00267b0ab.json
tests/: test_agent_evaluator.py  test_agent_generator.py  test_agent_planner.py  test_calibration.py  test_cli.py  test_cli_wiring.py  test_config.py  test_contracts.py  test_criteria_loader.py  test_evaluator_refusal.py  test_executors.py  test_integration.py  test_isolation.py  test_multi_model.py  test_orchestrator_wiring.py  test_reconciler.py  test_replay.py  (+3 more)
(+184 files in other folders)
